--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Angular App</h1>
+<app-navbar></app-navbar>
 
-<app-users></app-users>
+<div class="container">
+  <app-users></app-users>
+</div>
