--- a/angularapp/src/app/components/users/users.component.html
+++ b/angularapp/src/app/components/users/users.component.html
@@ -19,12 +19,16 @@
 
       <div class="col-sm-8">
         <!--<h3><span [textContent]="user.lastName"></span> {{ user.lastName }}</h3>-->
-        <h3 [ngStyle]="currentStyles">{{ user.firstName }} {{ user.lastName }}</h3>
+        <h3 [ngStyle]="currentStyles">{{ user.firstName | uppercase }} {{ user.lastName | lowercase }}</h3>
 
         <ul class="list-group" *ngIf="showExtended && user.age && user.address">
 
           <li class="list-group-item">Age: {{ user.age }}</li>
           <li class="list-group-item">Address: {{ user.address.street }} {{ user.address.city }}, {{ user.address.state}} </li>
+          <li class="list-group-item">Balance: {{ user.balance | currency:"IDR":"symbol" }}
+          until {{ .5 | percent }}</li>
+          <li class="list-group-item">Joined: {{ user.registered | date }}</li>
+          <li class="list-group-item" ngNonBindable><pre>{{ 5 | number:"1.2" }}</pre></li>
 
         </ul>
       </div>
