--- a/angularapp/src/app/components/users/users.component.html
+++ b/angularapp/src/app/components/users/users.component.html
@@ -1,6 +1,6 @@
 <h2>Users</h2>
 
-<button [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+<button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
 
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
 
