--- a/angularapp/src/app/components/users/users.component.html
+++ b/angularapp/src/app/components/users/users.component.html
@@ -1,6 +1,44 @@
-<h2>Users</h2>
+<button (click)="showUserForm = !showUserForm" class="btn btn-dark mb-3">Add User</button>
 
-<button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+<div class="card card-body mb-3" *ngIf="showUserForm">
+  <h2>Add User</h2>
+</div>
+
+<form (submit)="onSubmit($event)">
+  <div class="form-group">
+    <label>First Name</label>
+    <input type="text" class="form-control" name="firstName">
+  </div>
+
+  <div class="form-group">
+    <label>Last Name</label>
+    <input type="text" class="form-control" name="lastName">
+  </div>
+
+  <div class="form-group">
+    <label>Age</label>
+    <input type="number" class="form-control" name="age">
+  </div>
+
+  <div class="form-group">
+    <label>Street Address</label>
+    <input type="text" class="form-control" name="Street">
+  </div>
+
+  <div class="form-group">
+    <label>City</label>
+    <input type="text" class="form-control" name="city">
+  </div>
+
+  <div class="form-group">
+    <label>State</label>
+    <input type="text" class="form-control" name="state">
+  </div>
+
+  <button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+</form>
+
+
 
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
 
