--- a/angularapp/src/app/components/users/users.component.html
+++ b/angularapp/src/app/components/users/users.component.html
@@ -16,26 +16,11 @@
   </div>
 
   <div class="form-group">
-    <label>Age</label>
-    <input type="number" [(ngModel)]="user.age" class="form-control" name="age">
+    <label>Email</label>
+    <input type="email" [(ngModel)]="user.email" class="form-control" name="email">
   </div>
 
-  <div class="form-group">
-    <label>Street Address</label>
-    <input type="text" [(ngModel)]="user.address.street" class="form-control" name="street">
-  </div>
-
-  <div class="form-group">
-    <label>City</label>
-    <input type="text" [(ngModel)]="user.address.city" class="form-control" name="city">
-  </div>
-
-  <div class="form-group">
-    <label>State</label>
-    <input type="text" [(ngModel)]="user.address.state" class="form-control" name="state">
-  </div>
-
-  <button (click)="addUser( )" [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add New User</button>
+  <button [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add New User</button>
 </form>
 
 
@@ -46,13 +31,12 @@
       [class.bg-light]="user.isActive">
 
         <h3>{{ user.firstName }} {{ user.lastName }}
-        <small *ngIf="user.age && user.address"><button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm"><i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i></button></small>
+        <small><button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm"><i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i></button></small>
         </h3>
 
-        <ul class="list-group" *ngIf="!user.hide && user.age && user.address">
+        <ul class="list-group" *ngIf="!user.hide">
 
-          <li class="list-group-item">Age: {{ user.age }}</li>
-          <li class="list-group-item">Address: {{ user.address.street }} {{ user.address.city }}, {{ user.address.state}} </li>
+          <li class="list-group-item">Email: {{ user.email  }}</li>
           <li class="list-group-item">Joined: {{ user.registered | date }}</li>
 
         </ul>
